2012-07-06  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (@ifcommanddefined, @ifcommandnotdefined): new
	prospective conditionals, not confirmed
	(txicommandconditionals): implicitly @set this variable.

	* doc/texinfo.txi (Node Line Requirements): discuss commands in
	node names.
	(Two Paths): merge into Texinfo Document Structure, with @anchor.
	(Node Line Tips): merge into Node Names, with anchor.
	(Node Menu Illustration): try making last in chapter.

2012-06-19  Patrice Dumas  <pertusus@free.fr>
        and Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Beginning a File): general updates
	throughout the chapter.

2012-07-04  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Software Copying Permissions): remove node.
	(Document Permissions): add replacement text.
	Suggestion from Patrice.

2012-07-03  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Overview): general updates
	throughout the chapter, most suggested by Patrice,
	texinfo-devel 21 May 2012 01:01:24.
	(Texinfo Document Structure): new section/node.

2012-06-29  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (top command): new node, merging the
	mostly-redundant information from the nodes:
	(makeinfo top command, makeinfo top): remove these.
	Leave anchors with the old node names behind.

2012-06-19  Patrice Dumas  <pertusus@free.fr>
        and Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Chapter Structuring): general updates
	throughout the chapter.

2012-06-19  Patrice Dumas  <pertusus@free.fr>
        and Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Nodes): general updates throughout
	the chapter.

2012-06-19  Patrice Dumas  <pertusus@free.fr>
        and Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Menus): general updates throughout
	the chapter.

2012-06-15  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi: remove all now-unnecessary @refill's
	and @ignore blocks relating to the long-gone @ctrl, @br, etc.,
	for source clarity.

2012-06-14  Patrice Dumas  <pertusus@free.fr>